Despliegue kubernates/02-servicios.yaml
# ---------------------------------------------------
# 1. MS-CLIENTES (Spring Boot - Puerto 8081)
# ---------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-clientes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-clientes
  template:
    metadata:
      labels:
        app: ms-clientes
    spec:
      containers:
      - name: ms-clientes
        image: asherrera11/ms-clientes:v1
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ms-clientes-svc
spec:
  selector:
    app: ms-clientes
  ports:
    - port: 80      # Puerto interno del cluster
      targetPort: 8081 # Puerto de tu Spring Boot
  type: ClusterIP

---
# ---------------------------------------------------
# 2. ZONE-CORE (Spring Boot - Puerto 8080)
# ---------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zone-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zone-core
  template:
    metadata:
      labels:
        app: zone-core
    spec:
      containers:
      - name: zone-core
        image: asherrera11/zone-core:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zone-core-svc
spec:
  selector:
    app: zone-core
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP

---
# ---------------------------------------------------
# 3. NOTIFICATION-SERVICE (NestJS - Puerto 3001)
# ---------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: asherrera11/notification-service:v2
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
spec:
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP

---
# ---------------------------------------------------
# 4. TICKETS-API (GraphQL - Puerto 4000)
# ---------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
      - name: ticket-service
        image: asherrera11/ticket-service:v1
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-svc
spec:
  selector:
    app: ticket-service
  ports:
    - port: 80
      targetPort: 4000
  type: ClusterIP
